apport (0.85) UNRELEASED; urgency=low

  * apport/crashdb_impl/launchpad.py: BugList.bugs is already a set, simplify
    code a bit.
  * debian/control: Add dpkg-dev dependency to apport-retrace, for getting
    dpkg-source.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 19 Jun 2007 22:54:27 +0200

apport (0.84) gutsy; urgency=low

  * apport/crashdb.py: Add new abstract methods:
    - get_unretraced() and mark_retraced(id) to get a list of crashes that
      need to be retraced and chalk them off.
    - get_dup_unchecked() and mark_dup_checked() to get a list of crashes that
      need to be checked for being a duplicate and chalk them off. This is
      aimed at crashes which do not need retracing, such as unhandled Python
      exceptions.
  * apport/crashdb_impl/launchpad.py: Implement above methods for launchpad
    (moving the code from bin/launchpad-crash-digger).
  * apport/crashdb_impl/launchpad.py: Set "need-duplicate-check" tag for
    Python crashes.
  * apport/crashdb_impl/launchpad.py, download(): Fetch Traceback.txt, too, so
    that we can do duplicate checking for Python crashes.
  * bin/launchpad-crash-digger: Drop Launchpad specific code and replace it
    with calls to above new functions. Rename to bin/crash-digger. Also rename
    all 'cookie' to 'auth' (as happened with the other applications earlier).
  * bin/crash-digger: Do duplicate checking for needs-duplicate-check crash
    bugs (such as Python crashes).
  * bin/apport-retrace, bin/crash-digger: More language cleanup; we should
    stop talking about 'bugs' and use 'crash' consistently.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 14 Jun 2007 19:50:24 +0200

apport (0.83) gutsy; urgency=low

  * apport/crashdb.py: Separate abstract from implemented functions.
  * apport/crashdb.py, apport/packaging.py, apport/ui.py: Use
    NotImplementedError instead of Exception in the abstract methods.
  * apport/packaging.py: Add interface compare_versions() for comparing