@@ -4,8 +4,10 @@ apport (0.85) UNRELEASED; urgency=low
     code a bit.
   * debian/control: Add dpkg-dev dependency to apport-retrace, for getting
     dpkg-source.
+  * apport/report.py, crash_signature(): Allow ':' and '~' as part of function
+    names to cover C++. Adapt test case to cover this.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 19 Jun 2007 22:54:27 +0200
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 19 Jun 2007 23:09:23 +0200
 
 apport (0.84) gutsy; urgency=low
 
